--- a/project2/CMakeLists.txt
+++ b/project2/CMakeLists.txt
@@ -3,7 +3,7 @@ project(proj2)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lpthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lpthread -pthread")
 
 set(
     MY_SOURCES
@@ -12,4 +12,8 @@ set(
     utils.h
 )
 
+find_package(Threads REQUIRED)
+
 add_executable(proj_2 ${MY_SOURCES})
+
+target_link_libraries(proj_2 PRIVATE Threads::Threads)
